added image of pot in main

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li class="nav-flex__item"><a href="#contact">CONTACT</a></li>
                 <h1>CARA <img src=".\assets\UX-HTML-CSS\icons8-pottery-96.png" alt="Pot image" style="width: 25px;height: 25px;"> CARA</h1>
                 <li class="nav-flex__item"><a href="#searchbar"><img src=".\assets\UX-HTML-CSS\1200px-Google_Magnifying_Glass.svg.png" alt="magnifying glass" style="width: 30px;height: 30px;"></a></li>
+                <li class="nav-flex__item"><a href="#cart">CART</a></li>
             </ul>
         </nav>
     </header>
@@ -25,7 +26,7 @@
     <!-- Main -->
     <main class="h-200 lin-grad__lt-to-drk">
         <section id="home">
-            HOME
+            <img src=".\assets\UX-HTML-CSS\earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="p000px;ot home" style="width: 1">
         </section>
         <section id="about">
             ABOUT
