added about images

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <!-- Main -->
     <main class="h-200 lin-grad__lt-to-drk">
         <section id="home">
-            <img src=".\assets\UX-HTML-CSS\earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="p000px;ot home" style="width: 1">
+            <img src=".\assets\UX-HTML-CSS\earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="home pot" style="width: 1000"></li>
+        </section>
         </section>
         <section id="about">
-            ABOUT
+            <img src=".\assets\UX-HTML-CSS\Vase_Dame_2048x2048.jpg" alt="about pot left" style="width: 300px;">
+            <img src=".\assets\UX-HTML-CSS\Cylinder_unglazed3_2048x2048.jpg" alt="about pot right" style="width: 300px;">
         </section>
         <section id="products">
             <h2>Products</h2>
