--- a/index.html
+++ b/index.html
@@ -31,13 +31,38 @@
         </section>
         <section id="about">
             <img src=".\assets\UX-HTML-CSS\Vase_Dame_2048x2048.jpg" alt="about pot left" style="width: 300px;">
+            <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <img src=".\assets\UX-HTML-CSS\Cylinder_unglazed3_2048x2048.jpg" alt="about pot right" style="width: 300px;">
         </section>
         <section id="products">
             <h2>Products</h2>
             <div>
                 <div>
-                    <img src="./assets/images/Hello!.gif" alt="">
+                    <img src=".\assets\UX-HTML-CSS\tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="Mundo Bowls" style="width: 300px;">
+                </div>
+                <div>
+                    <img src=".\assets\UX-HTML-CSS\oriento-maVIpNNtmlQ-unsplash.jpg" alt="Natureza Vase" style="width: 300px;">
+                </div>
+                <div>
+                    <img src=".\assets\UX-HTML-CSS\tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="Fiera Bowls" style="width: 300px;">
+                </div>
+                <div>
+                    <img src=".\assets\UX-HTML-CSS\tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="Natureza Pots" style="width: 300px;">
+                </div>
+                <div>
+                    <img src=".\assets\UX-HTML-CSS\linh-le-a0rE64YJDA4-unsplash.jpg" alt="Pedra Vase" style="width: 300px;">
+                </div>
+                <div>
+                    <img src=".\assets\UX-HTML-CSS\tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="Viaja Pots" style="width: 300px;">
+                </div>
+                <div>
+                    <img src=".\assets\UX-HTML-CSS\tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="Servico Plates" style="width: 300px;">
+                </div>
+                <div>
+                    <img src=".\assets\UX-HTML-CSS\oriento-l0ah3UBLppo-unsplash.jpg" alt="Campeao Vase" style="width: 300px;">
+                </div>
+                <div>
+                    <img src=".\assets\UX-HTML-CSS\tom-crew-SITGdvztUdg-unsplash.jpg" alt="Troca Bowls" style="width: 300px;">
                 </div>
                 <div>
                     <div>
