--- a/index.html
+++ b/index.html
@@ -24,44 +24,39 @@
     </header>
 ​
     <!-- Main -->
-    <main class="h-200 lin-grad__lt-to-drk">
+    <main class="h-2500 lin-grad__lt-to-drk">
         <section id="home">
-            <img src=".\assets\UX-HTML-CSS\earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="home pot" style="width: 1000"></li>
+            <div class="center">
+                <img src=".\assets\UX-HTML-CSS\earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="home pot" style="width: 1000"></li>
+
+            </div>
         </section>
         </section>
         <section id="about">
+            <h2>About</h2>
             <img src=".\assets\UX-HTML-CSS\Vase_Dame_2048x2048.jpg" alt="about pot left" style="width: 300px;">
-            <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div>
+
+                <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
             <img src=".\assets\UX-HTML-CSS\Cylinder_unglazed3_2048x2048.jpg" alt="about pot right" style="width: 300px;">
         </section>
         <section id="products">
-            <h2>Products</h2>
+            <h3>Products</h3>
             <div>
-                <div>
+                <div class="nav-flex-spacing">
                     <img src=".\assets\UX-HTML-CSS\tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="Mundo Bowls" style="width: 300px;">
-                </div>
-                <div>
                     <img src=".\assets\UX-HTML-CSS\oriento-maVIpNNtmlQ-unsplash.jpg" alt="Natureza Vase" style="width: 300px;">
-                </div>
-                <div>
                     <img src=".\assets\UX-HTML-CSS\tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="Fiera Bowls" style="width: 300px;">
                 </div>
-                <div>
+                <div class="nav-flex-spacing">
                     <img src=".\assets\UX-HTML-CSS\tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="Natureza Pots" style="width: 300px;">
-                </div>
-                <div>
-                    <img src=".\assets\UX-HTML-CSS\linh-le-a0rE64YJDA4-unsplash.jpg" alt="Pedra Vase" style="width: 300px;">
-                </div>
-                <div>
+                    <img src=".\assets\UX-HTML-CSS\linh-le-a0rE64YJDA4-unsplash.jpg" alt="Pedra Vase" style="width: 300px;height: 230px;">
                     <img src=".\assets\UX-HTML-CSS\tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="Viaja Pots" style="width: 300px;">
                 </div>
-                <div>
+                <div class="nav-flex-spacing">
                     <img src=".\assets\UX-HTML-CSS\tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="Servico Plates" style="width: 300px;">
-                </div>
-                <div>
                     <img src=".\assets\UX-HTML-CSS\oriento-l0ah3UBLppo-unsplash.jpg" alt="Campeao Vase" style="width: 300px;">
-                </div>
-                <div>
                     <img src=".\assets\UX-HTML-CSS\tom-crew-SITGdvztUdg-unsplash.jpg" alt="Troca Bowls" style="width: 300px;">
                 </div>
                 <div>
@@ -71,23 +66,36 @@
                     <div>
                         <p>Describe</p>
                     </div>
-                    <div>
-                        <button>1</button>
-                        <button>2</button>
-                    </div>
-​
+                    ​
                 </div>
             </div>
-​
+            ​
         </section>
         <section id="contact">
             CONTACT
         </section>
+        <div>
+            <button><a href="#">
+                SEND
+            </a></button>
+        </div>
 ​
     </main>
 ​
     <!-- Footer -->
     <footer class="h-200">
+        <div class="nav-flex-spacing">
+            <img src=".\assets\UX-HTML-CSS\icons8-youtube-96.png" alt="youtube">
+            <img src=".\assets\UX-HTML-CSS\icons8-facebook-96 (1).png" alt="facebook">
+            <h1>CARA <img src=".\assets\UX-HTML-CSS\icons8-pottery-96.png" alt="Pot image" style="width: 50px;height: 50px;"> CARA</h1>
+            <img src=".\assets\UX-HTML-CSS\icons8-twitter-96.png" alt="twitter">
+            <img src=".\assets\UX-HTML-CSS\icons8-instagram-96.png" alt="instagram">
+        </div>
+        <div>
+            <p class="center">
+                Pretium nibh ipsum consequat nisl vel pretium. Amet tellus cras adipiscing enim eu turpis. ©Copyright 2015 - 2020 
+            </p>
+        </div>
 ​
     </footer>
 ​
