updated products page with description and buttons and header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="nav-flex__item"><a href="#contact">CONTACT</a></li>
                 <h1>CARA <img src=".\assets\UX-HTML-CSS\icons8-pottery-96.png" alt="Pot image" style="width: 25px;height: 25px;"> CARA</h1>
                 <li class="nav-flex__item"><a href="#searchbar"><img src=".\assets\UX-HTML-CSS\1200px-Google_Magnifying_Glass.svg.png" alt="magnifying glass" style="width: 30px;height: 30px;"></a></li>
-                <li class="nav-flex__item"><a href="#cart">CART</a></li>
+                <li class="nav-flex__item"><a href="#cart">CART (0)</a></li>
             </ul>
         </nav>
     </header>
@@ -44,29 +44,129 @@
         <section id="products">
             <h3>Products</h3>
             <div>
-                <div class="nav-flex-spacing">
-                    <img src=".\assets\UX-HTML-CSS\tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="Mundo Bowls" style="width: 300px;">
-                    <img src=".\assets\UX-HTML-CSS\oriento-maVIpNNtmlQ-unsplash.jpg" alt="Natureza Vase" style="width: 300px;">
-                    <img src=".\assets\UX-HTML-CSS\tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="Fiera Bowls" style="width: 300px;">
-                </div>
-                <div class="nav-flex-spacing">
-                    <img src=".\assets\UX-HTML-CSS\tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="Natureza Pots" style="width: 300px;">
-                    <img src=".\assets\UX-HTML-CSS\linh-le-a0rE64YJDA4-unsplash.jpg" alt="Pedra Vase" style="width: 300px;height: 230px;">
-                    <img src=".\assets\UX-HTML-CSS\tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="Viaja Pots" style="width: 300px;">
-                </div>
-                <div class="nav-flex-spacing">
-                    <img src=".\assets\UX-HTML-CSS\tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="Servico Plates" style="width: 300px;">
-                    <img src=".\assets\UX-HTML-CSS\oriento-l0ah3UBLppo-unsplash.jpg" alt="Campeao Vase" style="width: 300px;">
-                    <img src=".\assets\UX-HTML-CSS\tom-crew-SITGdvztUdg-unsplash.jpg" alt="Troca Bowls" style="width: 300px;">
-                </div>
-                <div>
-                    <div>
-                        <h3>Title Text Here</h3>
+                <div class="nav-flex-spacing img-with-text">
+                    <div class="item">
+                        <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="Mundo Bowls" style="width: 300px;"></a>
+                        <h4>MUNDO BOWLS</h4>
+                        <p>
+                            Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                        </p> 
+                        <button><a href="#">
+                            Learn More
+                        </a></button>
+                        <button><a href="#">
+                            ADD TO CART
+                        </a></button>
+                          
                     </div>
-                    <div>
-                        <p>Describe</p>
+                    <div class="item">
+                    <a href="#"><img src=".\assets\UX-HTML-CSS\oriento-maVIpNNtmlQ-unsplash.jpg" alt="Natureza Vase" style="width: 300px;"></a>
+                        <h5>NATUREZA VASE</h5>
+                        <p>
+                            Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                        </p>
+                        <button><a href="#">
+                            Learn More
+                        </a></button>
+                        <button><a href="#">
+                            ADD TO CART
+                        </a></button>   
                     </div>
-                    ​
+                    <div class="item">
+                    <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="Fiera Bowls" style="width: 300px;"></a>
+                        <h6>FIERA BOWLS</h6>
+                        <p>
+                            Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                        </p> 
+                        <button><a href="#">
+                            Learn More
+                        </a></button>
+                        <button><a href="#">
+                            ADD TO CART
+                        </a></button>  
+                    </div>
+                </div>
+                <div class="nav-flex-spacing">
+                    <div class="item">
+                    <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="Natureza Pots" style="width: 300px;"></a>
+                        <h7>NATUREZA POTS</h7>
+                        <p>
+                            Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                        </p> 
+                        <button><a href="#">
+                            Learn More
+                        </a></button>
+                        <button><a href="#">
+                            ADD TO CART
+                        </a></button>  
+                    </div>
+                    <div class="item">
+                    <a href="#"><img src=".\assets\UX-HTML-CSS\linh-le-a0rE64YJDA4-unsplash.jpg" alt="Pedra Vase" style="width: 300px;height: 230px;"></a>
+                        <h8>PEDRA VASE</h8>
+                        <p>
+                            Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                        </p>
+                        <button><a href="#">
+                            Learn More
+                        </a></button>
+                        <button><a href="#">
+                            ADD TO CART
+                        </a></button>   
+                    </div>
+                    <div class="item">
+                    <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="Viaja Pots" style="width: 300px;"></a>
+                        <h9>VIAJA POTS</h9>
+                        <p>
+                            Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                        </p> 
+                        <button><a href="#">
+                            Learn More
+                        </a></button>
+                        <button><a href="#">
+                            ADD TO CART
+                        </a></button>  
+                    </div>
+                </div>
+                <div class="nav-flex-spacing">
+                    <div class="item">
+                    <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="Servico Plates" style="width: 300px;"></a>
+                        <h10>SERVICO PLATES</h10>
+                        <p>
+                            Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                        </p>  
+                        <button><a href="#">
+                            Learn More
+                        </a></button>
+                        <button><a href="#">
+                            ADD TO CART
+                        </a></button> 
+                    </div>
+                    <div class="item">
+                    <a href="#"><img src=".\assets\UX-HTML-CSS\oriento-l0ah3UBLppo-unsplash.jpg" alt="Campeao Vase" style="width: 300px;"></a>
+                        <h11>CAMPEAO VASE</h11>
+                        <p>
+                            Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                        </p>  
+                        <button><a href="#">
+                            Learn More
+                        </a></button>
+                        <button><a href="#">
+                            ADD TO CART
+                        </a></button> 
+                    </div>
+                    <div class="item">
+                    <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-SITGdvztUdg-unsplash.jpg" alt="Troca Bowls" style="width: 300px;"></a>
+                        <h12>TROCA BOWLS</h12>
+                        <p>
+                            Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                        </p>   
+                        <button><a href="#">
+                            Learn More
+                        </a></button>
+                        <button><a href="#">
+                            ADD TO CART
+                        </a></button>
+                    </div>
                 </div>
             </div>
             ​
