added anchors to footer, added contact us boxes, added text in about us section, added faded photo with text on top

--- a/index.html
+++ b/index.html
@@ -26,28 +26,39 @@
     <!-- Main -->
     <main class="h-2500 lin-grad__lt-to-drk">
         <section id="home">
-            <div class="center">
-                <img src=".\assets\UX-HTML-CSS\earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="home pot" style="width: 1000"></li>
+            <div class="main-pic">
+                <p class="main-left">
+                    CERAMICS CRAFTED BY HAND...
+                </p>
+                <p class="main-right">
+                    ...FROM THE GROUND UP
+                </p>
+                <!-- <img src=".\assets\UX-HTML-CSS\earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="home pot" style="width: 1000"></li> -->
 
             </div>
         </section>
         </section>
         <section id="about">
-            <h2>About</h2>
-            <img src=".\assets\UX-HTML-CSS\Vase_Dame_2048x2048.jpg" alt="about pot left" style="width: 300px;">
-            <div>
-
-                <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2>ABOUT US</h2>
+            <div class="float-right">
+                <img src=".\assets\UX-HTML-CSS\Cylinder_unglazed3_2048x2048.jpg" alt="about pot right" style="width: 300px;">
             </div>
-            <img src=".\assets\UX-HTML-CSS\Cylinder_unglazed3_2048x2048.jpg" alt="about pot right" style="width: 300px;">
+            <div>
+                <p> 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et pharetra pharetra massa massa ultricies mi quis. Ultricies lacus sed turpis tincidunt id aliquet risus. Sem integer vitae justo eget magna fermentum iaculis eu. Mattis nunc sed blandit libero volutpat sed cras ornare. Id aliquet lectus proin nibh nisl condimentum id venenatis. Ultricies mi eget mauris pharetra et ultrices. At ultrices mi tempus imperdiet nulla. Ipsum a arcu cursus vitae. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. At erat pellentesque adipiscing commodo elit. Sed velit dignissim sodales ut eu. Tellus mauris a diam maecenas. Ac auctor augue mauris augue neque gravida in fermentum et. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Nam at lectus urna duis convallis convallis tellus id. Justo donec enim diam vulputate ut pharetra sit. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.
+                </p>
+            </div>
+            <div>
+                <img src=".\assets\UX-HTML-CSS\Vase_Dame_2048x2048.jpg" alt="about pot left" style="width: 300px;" ALIGN="left"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et pharetra pharetra massa massa ultricies mi quis. Ultricies lacus sed turpis tincidunt id aliquet risus. Sem integer vitae justo eget magna fermentum iaculis eu. Mattis nunc sed blandit libero volutpat sed cras ornare. Id aliquet lectus proin nibh nisl condimentum id venenatis. Ultricies mi eget mauris pharetra et ultrices. At ultrices mi tempus imperdiet nulla. Ipsum a arcu cursus vitae. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. At erat pellentesque adipiscing commodo elit. Sed velit dignissim sodales ut eu. Tellus mauris a diam maecenas. Ac auctor augue mauris augue neque gravida in fermentum et. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Nam at lectus urna duis convallis convallis tellus id. Justo donec enim diam vulputate ut pharetra sit. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et pharetra pharetra massa massa ultricies mi quis. Ultricies lacus sed turpis tincidunt id aliquet risus. Sem integer vitae justo eget magna fermentum iaculis eu. Mattis nunc sed blandit libero volutpat sed cras ornare. Id aliquet lectus proin nibh nisl condimentum id venenatis. Ultricies mi eget mauris pharetra et ultrices. At ultrices mi tempus imperdiet nulla. Ipsum a arcu cursus vitae. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. At erat pellentesque adipiscing commodo elit. Sed velit dignissim sodales ut eu. Tellus mauris a diam maecenas. Ac auctor augue mauris augue neque gravida in fermentum et. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Nam at lectus urna duis convallis convallis tellus id. Justo donec enim diam vulputate ut pharetra sit. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et pharetra pharetra massa massa ultricies mi quis. Ultricies lacus sed turpis tincidunt id aliquet risus. Sem integer vitae justo eget magna fermentum iaculis eu. Mattis nunc sed blandit libero volutpat sed cras ornare. Id aliquet lectus proin nibh nisl condimentum id venenatis. Ultricies mi eget mauris pharetra et ultrices. At ultrices mi tempus imperdiet nulla. Ipsum a arcu cursus vitae. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. At erat pellentesque adipiscing commodo elit. Sed velit dignissim sodales ut eu. Tellus mauris a diam maecenas. Ac auctor augue mauris augue neque gravida in fermentum et. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Nam at lectus urna duis convallis convallis tellus id. Justo donec enim diam vulputate ut pharetra sit. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et pharetra pharetra massa massa ultricies mi quis. Ultricies lacus sed turpis tincidunt id aliquet risus. Sem integer vitae justo eget magna fermentum iaculis eu. Mattis nunc sed blandit libero volutpat sed cras ornare. Id aliquet lectus proin nibh nisl condimentum id venenatis. Ultricies mi eget mauris pharetra et ultrices. At ultrices mi tempus imperdiet nulla. Ipsum a arcu cursus vitae. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. At erat pellentesque adipiscing commodo elit. Sed velit dignissim sodales ut eu. Tellus mauris a diam maecenas. Ac auctor augue mauris augue neque gravida in fermentum et. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Nam at lectus urna duis convallis convallis tellus id. Justo donec enim diam vulputate ut pharetra sit. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.</p>
+            </div>
         </section>
         <section id="products">
-            <h3>Products</h3>
+            <h3>OUR PRODUCTS</h3>
             <div>
                 <div class="nav-flex-spacing img-with-text">
                     <div class="item">
                         <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="Mundo Bowls" style="width: 300px;"></a>
-                        <h4>MUNDO BOWLS</h4>
+                        <h4>MUNDO BOWLS $48.00</h4>
                         <p>
                             Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
                         </p> 
@@ -61,7 +72,7 @@
                     </div>
                     <div class="item">
                     <a href="#"><img src=".\assets\UX-HTML-CSS\oriento-maVIpNNtmlQ-unsplash.jpg" alt="Natureza Vase" style="width: 300px;"></a>
-                        <h5>NATUREZA VASE</h5>
+                        <h5>NATUREZA VASE $37.00</h5>
                         <p>
                             Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
                         </p>
@@ -74,7 +85,7 @@
                     </div>
                     <div class="item">
                     <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="Fiera Bowls" style="width: 300px;"></a>
-                        <h6>FIERA BOWLS</h6>
+                        <h6>FIERA BOWLS $29.00</h6>
                         <p>
                             Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
                         </p> 
@@ -89,7 +100,7 @@
                 <div class="nav-flex-spacing">
                     <div class="item">
                     <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="Natureza Pots" style="width: 300px;"></a>
-                        <h7>NATUREZA POTS</h7>
+                        <h7>NATUREZA POTS $59.00</h7>
                         <p>
                             Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
                         </p> 
@@ -102,7 +113,7 @@
                     </div>
                     <div class="item">
                     <a href="#"><img src=".\assets\UX-HTML-CSS\linh-le-a0rE64YJDA4-unsplash.jpg" alt="Pedra Vase" style="width: 300px;height: 230px;"></a>
-                        <h8>PEDRA VASE</h8>
+                        <h8>PEDRA VASE $31.00</h8>
                         <p>
                             Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
                         </p>
@@ -115,7 +126,7 @@
                     </div>
                     <div class="item">
                     <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="Viaja Pots" style="width: 300px;"></a>
-                        <h9>VIAJA POTS</h9>
+                        <h9>VIAJA POTS $57.00</h9>
                         <p>
                             Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
                         </p> 
@@ -130,7 +141,7 @@
                 <div class="nav-flex-spacing">
                     <div class="item">
                     <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="Servico Plates" style="width: 300px;"></a>
-                        <h10>SERVICO PLATES</h10>
+                        <h10>SERVICO PLATES $35.00</h10>
                         <p>
                             Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
                         </p>  
@@ -143,7 +154,7 @@
                     </div>
                     <div class="item">
                     <a href="#"><img src=".\assets\UX-HTML-CSS\oriento-l0ah3UBLppo-unsplash.jpg" alt="Campeao Vase" style="width: 300px;"></a>
-                        <h11>CAMPEAO VASE</h11>
+                        <h11>CAMPEAO VASE $37.00</h11>
                         <p>
                             Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
                         </p>  
@@ -156,7 +167,7 @@
                     </div>
                     <div class="item">
                     <a href="#"><img src=".\assets\UX-HTML-CSS\tom-crew-SITGdvztUdg-unsplash.jpg" alt="Troca Bowls" style="width: 300px;"></a>
-                        <h12>TROCA BOWLS</h12>
+                        <h12>TROCA BOWLS $25.00</h12>
                         <p>
                             Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
                         </p>   
@@ -172,7 +183,21 @@
             ​
         </section>
         <section id="contact">
-            CONTACT
+            CONTACT US
+            <div>
+                EMAIL
+                <form>
+                    <input type="text" name="Name" style="width: 30%;padding: 12px 20px;margin: 8px 0;">
+                </form>
+            </div>
+            <div>
+                MESSAGE
+                <div>
+                <form>
+                    <input type="text" name="Name" style="width: 30%;padding: 100px 20px;margin: 8px 0;">
+                </form>
+                </div>
+            </div>
         </section>
         <div>
             <button><a href="#">
@@ -185,11 +210,11 @@
     <!-- Footer -->
     <footer class="h-200">
         <div class="nav-flex-spacing">
-            <img src=".\assets\UX-HTML-CSS\icons8-youtube-96.png" alt="youtube">
-            <img src=".\assets\UX-HTML-CSS\icons8-facebook-96 (1).png" alt="facebook">
+            <a href="#"><img src=".\assets\UX-HTML-CSS\icons8-youtube-96.png" alt="youtube"></a>
+            <a href="#"><img src=".\assets\UX-HTML-CSS\icons8-facebook-96 (1).png" alt="facebook"></a>
             <h1>CARA <img src=".\assets\UX-HTML-CSS\icons8-pottery-96.png" alt="Pot image" style="width: 50px;height: 50px;"> CARA</h1>
-            <img src=".\assets\UX-HTML-CSS\icons8-twitter-96.png" alt="twitter">
-            <img src=".\assets\UX-HTML-CSS\icons8-instagram-96.png" alt="instagram">
+            <a href="#"><img src=".\assets\UX-HTML-CSS\icons8-twitter-96.png" alt="twitter"></a>
+            <a href="#"><img src=".\assets\UX-HTML-CSS\icons8-instagram-96.png" alt="instagram"></a>
         </div>
         <div>
             <p class="center">
