--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
         <section id="contact">
             CONTACT
         </section>
+        <form>
+            email:
+            <input type="text" name="Name" style="width: 300px;height: 200px">
+        </form>
         <div>
             <button><a href="#">
                 SEND
