added hyperlinks to cara cara on top and bottom, swapped bottom pot with white pot

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li class="nav-flex__item"><a href="#about">ABOUT</a></li>
                 <li class="nav-flex__item"><a href="#products">PRODUCTS</a></li>
                 <li class="nav-flex__item"><a href="#contact">CONTACT</a></li>
-                <h1>CARA <img src=".\assets\UX-HTML-CSS\icons8-pottery-96.png" alt="Pot image" style="width: 25px;height: 25px;"> CARA</h1>
+                <a href="#"><h1>CARA <img src=".\assets\UX-HTML-CSS\icons8-pottery-96.png" alt="Pot image" style="width: 25px;height: 25px;"> CARA</h1></a>
                 <li class="nav-flex__item"><a href="#searchbar"><img src=".\assets\UX-HTML-CSS\1200px-Google_Magnifying_Glass.svg.png" alt="magnifying glass" style="width: 30px;height: 30px;"></a></li>
                 <li class="nav-flex__item"><a href="#cart">CART (0)</a></li>
             </ul>
@@ -52,7 +52,7 @@
                 <img src=".\assets\UX-HTML-CSS\Vase_Dame_2048x2048.jpg" alt="about pot left" style="width: 300px;" ALIGN="left"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et pharetra pharetra massa massa ultricies mi quis. Ultricies lacus sed turpis tincidunt id aliquet risus. Sem integer vitae justo eget magna fermentum iaculis eu. Mattis nunc sed blandit libero volutpat sed cras ornare. Id aliquet lectus proin nibh nisl condimentum id venenatis. Ultricies mi eget mauris pharetra et ultrices. At ultrices mi tempus imperdiet nulla. Ipsum a arcu cursus vitae. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. At erat pellentesque adipiscing commodo elit. Sed velit dignissim sodales ut eu. Tellus mauris a diam maecenas. Ac auctor augue mauris augue neque gravida in fermentum et. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Nam at lectus urna duis convallis convallis tellus id. Justo donec enim diam vulputate ut pharetra sit. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et pharetra pharetra massa massa ultricies mi quis. Ultricies lacus sed turpis tincidunt id aliquet risus. Sem integer vitae justo eget magna fermentum iaculis eu. Mattis nunc sed blandit libero volutpat sed cras ornare. Id aliquet lectus proin nibh nisl condimentum id venenatis. Ultricies mi eget mauris pharetra et ultrices. At ultrices mi tempus imperdiet nulla. Ipsum a arcu cursus vitae. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. At erat pellentesque adipiscing commodo elit. Sed velit dignissim sodales ut eu. Tellus mauris a diam maecenas. Ac auctor augue mauris augue neque gravida in fermentum et. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Nam at lectus urna duis convallis convallis tellus id. Justo donec enim diam vulputate ut pharetra sit. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et pharetra pharetra massa massa ultricies mi quis. Ultricies lacus sed turpis tincidunt id aliquet risus. Sem integer vitae justo eget magna fermentum iaculis eu. Mattis nunc sed blandit libero volutpat sed cras ornare. Id aliquet lectus proin nibh nisl condimentum id venenatis. Ultricies mi eget mauris pharetra et ultrices. At ultrices mi tempus imperdiet nulla. Ipsum a arcu cursus vitae. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. At erat pellentesque adipiscing commodo elit. Sed velit dignissim sodales ut eu. Tellus mauris a diam maecenas. Ac auctor augue mauris augue neque gravida in fermentum et. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Nam at lectus urna duis convallis convallis tellus id. Justo donec enim diam vulputate ut pharetra sit. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et pharetra pharetra massa massa ultricies mi quis. Ultricies lacus sed turpis tincidunt id aliquet risus. Sem integer vitae justo eget magna fermentum iaculis eu. Mattis nunc sed blandit libero volutpat sed cras ornare. Id aliquet lectus proin nibh nisl condimentum id venenatis. Ultricies mi eget mauris pharetra et ultrices. At ultrices mi tempus imperdiet nulla. Ipsum a arcu cursus vitae. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. At erat pellentesque adipiscing commodo elit. Sed velit dignissim sodales ut eu. Tellus mauris a diam maecenas. Ac auctor augue mauris augue neque gravida in fermentum et. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Nam at lectus urna duis convallis convallis tellus id. Justo donec enim diam vulputate ut pharetra sit. Sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum.</p>
             </div>
         </section>
-        
+
 
         <section id="products">
             <h3>OUR PRODUCTS</h3>
@@ -201,10 +201,6 @@
                 </div>
             </div>
         </section>
-        <form>
-            email:
-            <input type="text" name="Name" style="width: 300px;height: 200px">
-        </form>
         <div>
             <button><a href="#">
                 SEND
@@ -218,7 +214,7 @@
         <div class="nav-flex-spacing">
             <a href="#"><img src=".\assets\UX-HTML-CSS\icons8-youtube-96.png" alt="youtube"></a>
             <a href="#"><img src=".\assets\UX-HTML-CSS\icons8-facebook-96 (1).png" alt="facebook"></a>
-            <h1>CARA <img src=".\assets\UX-HTML-CSS\icons8-pottery-96.png" alt="Pot image" style="width: 50px;height: 50px;"> CARA</h1>
+            <a href="#"><h1>CARA <img src=".\assets\UX-HTML-CSS\icons8-pottery-96 (1).png" alt="Pot image" style="width: 50px;height: 50px;"> CARA</h1></a>
             <a href="#"><img src=".\assets\UX-HTML-CSS\icons8-twitter-96.png" alt="twitter"></a>
             <a href="#"><img src=".\assets\UX-HTML-CSS\icons8-instagram-96.png" alt="instagram"></a>
         </div>
